objects/Trial_Contact__c.object
<CustomObject>
    <description>created as part of DPS-21134 for omni enterprise trial</description>
    <fields>
        <fullName>Accept_Terms_Date__c</fullName>
        <label>Accept Terms Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Trials__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBALT_GUID__c</fullName>
        <label>COBALT GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trial Contacts</relationshipLabel>
        <relationshipName>Trial_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATAROOM_GUID__c</fullName>
        <label>DATAROOM GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>created for trail enterprise as  part of DPS-21134</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Completion__c</fullName>
        <label>Entitlement Completion Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entitlement_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked when Eloqua email will be sent on Trial Status Active</description>
        <label>Entitlement Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whenever trial contact status is extended this checkbox will be set true, so to avoid multiple email from trial product contact trigger recursion</description>
        <label>Extended Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Contact_Number_Source__c</fullName>
        <label>External Contact Number Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contact_Number__c</fullName>
        <label>External Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_User_First_Name__c</fullName>
        <label>Invite User First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_User_Last_Name__c</fullName>
        <label>Invite User Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Trial Contacts</relationshipLabel>
        <relationshipName>Trial_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>One_Pass_ID__c</fullName>
        <label>One Pass ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Pass_User_Name__c</fullName>
        <description>Omni Trial -This will be populated from OLC/Onepass</description>
        <label>One Pass User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Trials__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is checked if User has selected as a primary on Trial Console page</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <description>Omni Trials : Field values on the Profile_Type__c field will be driven by Primary contact only, selected in Trial Console. 

Condition 1:
If status = ‘Active’ AND applicationId == ‘COBALT’
Then populate Profile_Type__c. = ‘EXISTING_USER_SAME_DOMAIN&apos;

Condition 2:
If status = ‘Inactive’ AND applicationId == ‘COBALT’
                 OR
status = ‘Active’ AND applicationId != ‘COBALT’
Then populate Profile_Type__c. = &apos;EXISTING_USER_NEW_DOMAIN&apos;

Condition 3
For GSI contacts(do not exist in OLC) or any other online contact scenario populate Profile_Type__c =  ‘NET_NEW&apos;</description>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW_CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>EXISTING_CUSTOMER_NEW_DOMAIN</fullName>
                </value>
                <value>
                    <fullName>EXISTING_CUSTOMER_SAME_DOMAIN</fullName>
                </value>
                <value>
                    <fullName>EXISTING_USER_NEW_DOMAIN</fullName>
                    <isActive>false</isActive>
                    <label>EXISTING_USER_NEW_DOMAIN</label>
                </value>
                <value>
                    <fullName>EXISTING_USER_SAME_DOMAIN</fullName>
                    <isActive>false</isActive>
                    <label>EXISTING_USER_SAME_DOMAIN</label>
                </value>
                <value>
                    <fullName>NET_NEW</fullName>
                    <isActive>false</isActive>
                    <label>NET_NEW</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRIAL_ADDUSER</fullName>
                </value>
                <value>
                    <fullName>TRIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>created for  enterprise trial as part of DPS-21134</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Bounceback</fullName>
                </value>
                <value>
                    <fullName>Rep Initiated</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>TimedOut</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Entitlement Error</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                    <isActive>false</isActive>
                    <label>Activated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trials__c</fullName>
        <label>Trial</label>
        <referenceTo>Ent_Trial__c</referenceTo>
        <relationshipLabel>Trial Contacts</relationshipLabel>
        <relationshipName>Trial_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stateCode__c</fullName>
        <label>stateCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Trial Contact</label>
    <nameField>
        <label>Trial Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trial Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>